fixed signup form(squashed)

--- a/src/components/Auth/SignUp/SignUp.css
+++ b/src/components/Auth/SignUp/SignUp.css
@@ -3,7 +3,12 @@
 	width: 400px;
 	margin: 0 auto;
 }
-
+.susi-logo{
+    margin:10px;
+}
+.signUpForm h1{
+    margin:10px;
+}
 @media screen and (max-width: 768px) {
 	.signUpForm h1{
 		font-size: 16px;
@@ -35,11 +40,11 @@
   width : 50%;
   float : right;
 }
-.app-body-div{
-  height: 80%;
-  width : 50%;
-  float : left;
-  background-color : #EEE;
+.app-body{
+    float : left;
+    width : 50%;
+    height: 80%;
+    background-color : #EEE;
 }
 .About{
   margin: 30vh 8% 0% 8%;
